# geodataset

./: .gitignore  README.md  pyproject.toml
assets/: france.json
geodataset/: __main__.py
